added the links to the project i did during week one of training

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>felix-mutua-ip</title>
-    <h1>FELIX MUTUA KASYOKI</h1>
-    <h2><img src="my-images/felix.jpeg" alt="This is a picture of felix when in a happy mood"></h2>
-
-</head>
-<body>
-    
-</body>
+    </head>
+    </body>
+ <h1 class="top">FELIX MUTUA KASYOKI</h1>
+    <h2 class="top image"><img src="my-images/felix.jpeg" alt="This is a picture of felix when in a happy mood"></h2>
+       <p>Below are the projects that i have created during our week one training :</p>
+   <ul>
+        <li> My first webpage, click this link <a href="file:///home/fkmutua/Documents/my-first-website/my-first-webpage-index.html">to access my first webpage </a> </li>
+        <li> My Favourite animal, click this link <a href="file:///home/fkmutua/Documents/my-favourite-animal/index.html"> to access favourite animal website</a></li>
+        <li> Games,click this link <a href="file:///home/fkmutua/Documents/my-first-website/favourite-games.html"> to access my favourite games website</a></li>
+   </ul>
+      
+<body></body>
 </html>
