--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     </head>
     </body>
  <h1 class="top">FELIX MUTUA KASYOKI</h1>
-    <h2 class="top image"><img src="my-images/felix.jpeg" alt="This is a picture of felix when in a happy mood"></h2>
+ <h2 class="top image"><img src="my-images/felix.jpeg" alt="This is a picture of felix when in a happy mood"></h2>
        <p>Below are the projects that i have created during our week one training :</p>
    <ul>
         <li> My first webpage, click this link <a href="file:///home/fkmutua/Documents/my-first-website/my-first-webpage-index.html">to access my first webpage </a> </li>
         <li> My Favourite animal, click this link <a href="file:///home/fkmutua/Documents/my-favourite-animal/index.html"> to access favourite animal website</a></li>
         <li> Games,click this link <a href="file:///home/fkmutua/Documents/my-first-website/favourite-games.html"> to access my favourite games website</a></li>
    </ul>
+   <h3>ABOUT FELIX MUTUA KASYOKI</h3>
+        <p>
+         I am  27 years old. i am tall and slender, i love swimming soo much.
+         i live in Naivasha and currently working at Safaricom PLC as a <strong>customer experience executive</strong>
+         </p>
+
       
 <body></body>
 </html>
