added first experience as an intern

--- a/index.html
+++ b/index.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>felix-mutua-ip</title>
-    </head>
-    </body>
- <h1 class="top">FELIX MUTUA KASYOKI</h1>
- <h2 class="top image"><img src="my-images/felix.jpeg" alt="This is a picture of felix when in a happy mood"></h2>
-       <p>Below are the projects that i have created during our week one training :</p>
-   <ul>
-        <li> My first webpage, click this link <a href="file:///home/fkmutua/Documents/my-first-website/my-first-webpage-index.html">to access my first webpage </a> </li>
-        <li> My Favourite animal, click this link <a href="file:///home/fkmutua/Documents/my-favourite-animal/index.html"> to access favourite animal website</a></li>
-        <li> Games,click this link <a href="file:///home/fkmutua/Documents/my-first-website/favourite-games.html"> to access my favourite games website</a></li>
-   </ul>
-   <h3>ABOUT FELIX MUTUA KASYOKI</h3>
-        <p>
-         I am  27 years old. i am tall and slender, i love swimming soo much.
-         i live in Naivasha and currently working at Safaricom PLC as a <strong>customer experience executive</strong>
-         </p>
 
-      
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>felix-mutua-ip</title>
+</head>
+</body>
+<h1 class="top">FELIX MUTUA KASYOKI</h1>
+<h2 class="top image"><img src="my-images/felix.jpeg" alt="This is a picture of felix when in a happy mood"></h2>
+<p>Below are the projects that i have created during our week one training :</p>
+<ol>
+   <li> My first webpage, click this link <a
+         href="file:///home/fkmutua/Documents/my-first-website/my-first-webpage-index.html">to access my first webpage
+      </a> </li>
+   <li> My Favourite animal, click this link <a href="file:///home/fkmutua/Documents/my-favourite-animal/index.html"> to
+         access favourite animal website</a></li>
+   <li> Games,click this link <a href="file:///home/fkmutua/Documents/my-first-website/favourite-games.html"> to access
+         my favourite games website</a></li>
+</ol>
+<h3>ABOUT FELIX MUTUA KASYOKI</h3>
+<p>
+   I am 27 years old. i am tall and slender, i love swimming soo much.
+   i live in Naivasha and currently working at Safaricom PLC as a <strong>customer experience executive</strong>
+</p>
+
+<h4>JOB EXPERIENCE</h4>
+<p>
+
+   JAMES FINLAYS ENGINEERING DEPARTMENT                           Intern 01/2014 to 04/2014
+   <ul>
+
+      <li> Vehicle inspection, both mechanical and electrical systems.</li>
+
+      <li>General servicing of Heavy Plant Equipment. </li>
+
+      <li>Designing of mechanical parts in the workshop. </li>
+
+      <li>Troubleshooting of machines in the fleet section. </li>
+   </ul>
+</p>
+
 <body></body>
+
 </html>
