added education information on the about me section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
   <header> <strong>FINLAYS ENGINEERING DEPARTMENT</strong> </header>
        <strong>Intern </strong>strong/2014 to 04/2014 
    <ul>
-
       <li> Vehicle inspection, both mechanical and electrical systems.</li>
 
       <li>General servicing of Heavy Plant Equipment. </li>
@@ -63,9 +62,15 @@
         <li>manages and resolves customer complaints.</li>
         <li> Documents all customer interaction information according to standard operating procedures.  </li>
       </ul>
-   
+  <header>
+     <strong>EDUCATION</strong> </header>
+         <dl>
+            <dt>BACHELOR OF SCIENCE: MECHATRONIC ENGINEERING</dt>
 
-</p>
+            <dd>DEDAN KIMATHI UNIVERSITY OF TECHNOLOGY</dd>
+         
+             <dd>Second Class Honours Upper Division</dl> </dl>
+         </p>
 
 <body></body>
 
