added the skills that i possess

--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
    <strong>SAFARICOM PLC</strong> </header>
      <strong>Customer Experience Executive </strong>  12/04/2017 to date
     <ul>
-        <li>Support customer to use Safaricom products. </li>
-        <li>Feedback link to the business for continuous improvement of products, services and processes.  </li>
-        <li>manages and resolves customer complaints.</li>
-        <li> Documents all customer interaction information according to standard operating procedures.  </li>
+      <li>Support customer to use Safaricom products. </li>
+
+      <li>Feedback link to the business for continuous improvement of products, services and processes.  </li>
+
+      <li>manages and resolves customer complaints.</li>
+
+      <li> Documents all customer interaction information according to standard operating procedures.  </li>
       </ul>
   <header>
      <strong>EDUCATION</strong> </header>
@@ -70,8 +73,16 @@
             <dd>DEDAN KIMATHI UNIVERSITY OF TECHNOLOGY</dd>
          
              <dd>Second Class Honours Upper Division</dl> </dl>
-         </p>
 
-<body></body>
+   <header>
+      <strong>SKILLS</strong></header>
+            I am proficient in:
+            <ol>
+               <li>Javascript programming </li>
+               <li>Autodesk Inventor  </li>
+               <li>Autocad  </li>
+            </ol>
+          </p>
+          <body>
 
 </html>
