started styling the header and bolded the about me section, not to add anymore content only styling

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>felix-mutua-ip</title>
+   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 </body>
 <h1 class="top">FELIX MUTUA KASYOKI</h1>
-<h2 class="top image"><img src="my-images/felix.jpeg" alt="This is a picture of felix when in a happy mood"></h2>
-<p>Below are the projects that i have created during our week one training :</p>
+<img class="felix-image"src="my-images/felix.jpeg" alt="This is a picture of felix when in a happy mood">
+
+<p><strong>Below are the projects that i have created during our week one training :</strong></p>
 <ol>
    <li> My first webpage, click this link <a
          href="file:///home/fkmutua/Documents/my-first-website/my-first-webpage-index.html">to access my first webpage
@@ -22,7 +24,7 @@
 <h3>ABOUT FELIX MUTUA KASYOKI</h3>
 <p>
    I am 27 years old. i am tall and slender, i love swimming soo much.
-   i live in Naivasha and currently working at Safaricom PLC as a <strong>customer experience executive</strong>
+   i live in Naivasha and currently working at Safaricom PLC as a <strong><em>customer experience executive</em></strong>
 </p>
 
 <h4>JOB EXPERIENCE</h4>
