added styling to the css file and removed spelling error on html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <li> Games,click this link <a href="file:///home/fkmutua/Documents/my-first-website/favourite-games.html"> to access
          my favourite games website</a></li>
 </ol>
-<h3>ABOUT FELIX MUTUA KASYOKI</h3>
+<h3 div class="middle">ABOUT FELIX MUTUA KASYOKI</h3>
 <p>
    I am 27 years old. i am tall and slender, i love swimming soo much.
    i live in Naivasha and currently working at Safaricom PLC as a <strong><em>customer experience executive</em></strong>
@@ -30,7 +30,7 @@
 <h4>JOB EXPERIENCE</h4>
 <p>
   <header> <strong>FINLAYS ENGINEERING DEPARTMENT</strong> </header>
-       <strong>Intern </strong>strong/2014 to 04/2014 
+       <strong>Intern </strong> 01/2014 to 04/2014 
    <ul>
       <li> Vehicle inspection, both mechanical and electrical systems.</li>
 
