added styling to about felix paragraph

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
          my favourite games website</a></li>
 </ol>
 <h3 div class="middle">ABOUT FELIX MUTUA KASYOKI</h3>
-<p>
+<p div class="felix-description">
    I am 27 years old. i am tall and slender, i love swimming soo much.
    i live in Naivasha and currently working at Safaricom PLC as a <strong><em>customer experience executive</em></strong>
 </p>
