styled all the subtopics to have the same styling and styled with header on css files

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
    I am 27 years old. i am tall and slender, i love swimming soo much.
    i live in Naivasha and currently working at Safaricom PLC as a <strong><em>customer experience executive</em></strong>
 </p>
-
-<h4>JOB EXPERIENCE</h4>
+<span class="page">
+<h4 class="header">JOB EXPERIENCE</h4>
 <p>
-  <header> <strong>FINLAYS ENGINEERING DEPARTMENT</strong> </header>
+  <header class="header"> <strong>FINLAYS ENGINEERING DEPARTMENT</strong> </header>
        <strong>Intern </strong> 01/2014 to 04/2014 
    <ul>
       <li> Vehicle inspection, both mechanical and electrical systems.</li>
@@ -40,7 +40,7 @@
 
       <li>Troubleshooting of machines in the fleet section. </li>
    </ul>
-<header>
+<header class="header">
    <strong>NODOR COMPANY LIMITED</strong>   </header>
 
       <strong>Trainee Engineer</strong>  05/2016 to 12/2016  
@@ -55,7 +55,7 @@
       
       <li>General machine maintenance and modification.</li>
       </ul>  
-<header>
+<header class="header">
    <strong>SAFARICOM PLC</strong> </header>
      <strong>Customer Experience Executive </strong>  12/04/2017 to date
     <ul>
@@ -67,7 +67,7 @@
 
       <li> Documents all customer interaction information according to standard operating procedures.  </li>
       </ul>
-  <header>
+  <header class="header">
      <strong>EDUCATION</strong> </header>
          <dl>
             <dt>BACHELOR OF SCIENCE: MECHATRONIC ENGINEERING</dt>
@@ -76,7 +76,7 @@
          
              <dd>Second Class Honours Upper Division</dl> </dl>
 
-   <header>
+   <header class="header">
       <strong>SKILLS</strong></header>
             I am proficient in:
             <ol>
@@ -84,7 +84,7 @@
                <li>Autodesk Inventor  </li>
                <li>Autocad  </li>
             </ol>
-          </p>
+          </p> </span>
           <body>
 
 </html>
