added styling to the bottom part of the page

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
    I am 27 years old. i am tall and slender, i love swimming soo much.
    i live in Naivasha and currently working at Safaricom PLC as a <strong><em>customer experience executive</em></strong>
 </p>
-<span class="page">
+<span class="Bottom layout">
+   
 <h4 class="header">JOB EXPERIENCE</h4>
 <p>
   <header class="header"> <strong>FINLAYS ENGINEERING DEPARTMENT</strong> </header>
-       <strong>Intern </strong> 01/2014 to 04/2014 
+       <strong class="sub-header">Intern </strong> 01/2014 to 04/2014 
    <ul>
       <li> Vehicle inspection, both mechanical and electrical systems.</li>
 
@@ -43,7 +44,7 @@
 <header class="header">
    <strong>NODOR COMPANY LIMITED</strong>   </header>
 
-      <strong>Trainee Engineer</strong>  05/2016 to 12/2016  
+      <strong class="sub-header">Trainee Engineer</strong>  05/2016 to 12/2016  
     <ul>
       <li>Installation of G-code programs in Computer Numerical Control machines.</li>
       
@@ -57,7 +58,7 @@
       </ul>  
 <header class="header">
    <strong>SAFARICOM PLC</strong> </header>
-     <strong>Customer Experience Executive </strong>  12/04/2017 to date
+     <strong class="sub-header">Customer Experience Executive </strong>  12/04/2017 to date
     <ul>
       <li>Support customer to use Safaricom products. </li>
 
@@ -78,7 +79,7 @@
 
    <header class="header">
       <strong>SKILLS</strong></header>
-            I am proficient in:
+            <strong> I am proficient in:</strong> 
             <ol>
                <li>Javascript programming </li>
                <li>Autodesk Inventor  </li>
