added padding to the left and right

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
    I am 27 years old. i am tall and slender, i love swimming soo much.
    i live in Naivasha and currently working at Safaricom PLC as a <strong><em>customer experience executive</em></strong>
 </p>
-<span class="Bottom layout">
-   
+<span class="Bottom-layout">
+
 <h4 class="header">JOB EXPERIENCE</h4>
 <p>
   <header class="header"> <strong>FINLAYS ENGINEERING DEPARTMENT</strong> </header>
