--- a/index.html
+++ b/index.html
@@ -13,13 +13,9 @@
 
 <p><strong>Below are the projects that i have created during our week one training :</strong></p>
 <ol>
-   <li> My first webpage, click this link <a
-         href="file:///home/fkmutua/Documents/my-first-website/my-first-webpage-index.html">to access my first webpage
-      </a> </li>
-   <li> My Favourite animal, click this link <a href="file:///home/fkmutua/Documents/my-favourite-animal/index.html"> to
-         access favourite animal website</a></li>
-   <li> Games,click this link <a href="file:///home/fkmutua/Documents/my-first-website/favourite-games.html"> to access
-         my favourite games website</a></li>
+   <li> My first webpage, click this link <a href="https://fkmutua.github.io/my-first--webpage/">to access my first webpage</a> </li>
+   
+   <li> Games,click this link <a href="https://fkmutua.github.io/my-first--webpage/favourite-games.html"> to accessmy favourite games website</a></li>
 </ol>
 <h3 div class="middle">ABOUT FELIX MUTUA KASYOKI</h3>
 <p div class="felix-description">
