added a link to the latest songs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <p><strong>Below are the projects that i have created during our week one training :</strong></p>
 <ol>
    <li> My first webpage, click this link <a href="https://fkmutua.github.io/my-first--webpage/">to access my first webpage</a> </li>
-   
+     <li> TO access the latest songs, click on this link <a href="https://www.google.com/search?q=latest+songs&rlz=1C1GCEB_enKE899KE899&oq=latest+songs&aqs=chrome..69i57j0l7.28504j0j4&sourceid=chrome&ie=UTF-8"> to access the lates songs</a>
+   </li>
    <li> Games,click this link <a href="https://fkmutua.github.io/my-first--webpage/favourite-games.html"> to accessmy favourite games website</a></li>
 </ol>
 <h3 div class="middle">ABOUT FELIX MUTUA KASYOKI</h3>
